--- a/src/App.css
+++ b/src/App.css
@@ -80,15 +80,15 @@ img{
   float: right;
 }
 .sk-cube-grid {
-  width: 40px;
-  height: 40px;
+  width: 200px;
+  height: 200px;
   margin: 100px auto;
 }
 
 .sk-cube-grid .sk-cube {
   width: 33%;
   height: 33%;
-  background-color: #333;
+  background-color: coral;
   float: left;
   -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
           animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
