--- a/src/App.css
+++ b/src/App.css
@@ -40,14 +40,14 @@ img{
 }
 .bottom{
   background-color: darksalmon;
+  clear: left;
+  
+  
   
   
 
 }
-.row{
-  border: 1px solid black;
-  
-}
+
 .adress{
   text-align: left;
   
@@ -62,10 +62,29 @@ img{
   float:left;
   border: 1px solid black;
   height: 280px;
-  width: 30;
+  
+  margin-bottom: 5px;
+  margin-top: 5px;
+  
+  
   
  
   
+}
+.searchIcon{
+  float: right;
+}
+.inputfield{
+  width:500px;
+}
+.aboutInputs{
+  background-color: darksalmon;
+  color:white;
+}
+.divovi2{
+  border: 1px solid black;
+  margin-bottom: 5px;
+
 }
 .female{
   background-color: pink;
